command line parameters support

--- a/core-sensor-reader.csproj
+++ b/core-sensor-reader.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="4.7.0" />
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
