--- a/core-sensor-reader.csproj
+++ b/core-sensor-reader.csproj
@@ -10,6 +10,10 @@
   <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="4.7.0" />
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
