--- a/.github/workflows/master_parco-leonardo-pm-web.yml
+++ b/.github/workflows/master_parco-leonardo-pm-web.yml
@@ -21,10 +21,10 @@ jobs:
         node-version: '12.x'
 
     - name: npm install, build, and test
-      run: |
+      run: 
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        npm run build --prod
+      working-directory: /sensor-viewer
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
