--- a/sensor-viewer/package.json
+++ b/sensor-viewer/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "lorem ipsut dixit",
   "main": "index.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "author": "Nicola Delfino",
   "license": "ISC",
   "dependencies": {
+    "azure-storage": "^2.10.3",
     "express": "^4.17.1"
   }
 }
