--- a/sensor-reader/core-sensor-reader.csproj
+++ b/sensor-reader/core-sensor-reader.csproj
@@ -8,12 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Ports" Version="4.7.0" />
-    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    <PackageReference Include="System.IO.Ports" Version="4.*" />
+    <PackageReference Include="CommandLineParser" Version="2.*" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.7" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.*" />
+    <PackageReference Include="Unosquare.Raspberry.IO" Version="0.27.1" />
   </ItemGroup>
 
 </Project>
