--- a/sensor-reader/core-sensor-reader.csproj
+++ b/sensor-reader/core-sensor-reader.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="4.*" />
     <PackageReference Include="CommandLineParser" Version="2.*" />
-    <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.7" />
+    <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.*" />
