--- a/.github/workflows/master_parco-leonardo-pm-web.yml
+++ b/.github/workflows/master_parco-leonardo-pm-web.yml
@@ -4,9 +4,7 @@
 name: Build and deploy Node.js app to Azure Web App - parco-leonardo-pm-web
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
