--- a/.github/workflows/master_parco-leonardo-pm-web2.yml
+++ b/.github/workflows/master_parco-leonardo-pm-web2.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - parco-leonardo-pm-web2
+name: Parco-leonardo-PM-web2
 
 on:
   push:
@@ -24,7 +24,6 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-        npm run test --if-present
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
